--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-GyWkRygT5xiG+x8qHF3nO4+YFA8iwZqEtRvT04hXjG4v6T+fgQY5sJzPt6Jf0Lh4fFiHztK9zV4stROX4TmI8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ACUM VET Urgențe</title>
   </head>
   <body>
     <div id="root"></div>
